# litui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  crates.js  help.html  index.html  kittest.toml  settings.html  src-files.js  typescript
.cargo/: config.toml
.github/workflows/: ci.yml  gh-pages.yml
crates/litui/: Cargo.toml
crates/litui/fixtures/: hello_headings.md  hello_lists.md  image_widget.md  selectors.md  selectors_full.md  styled_blockquote.md  styled_list.md  styles_basic.md  tables_basic.md  tables_formatted.md  tables_widgets.md  widgets_form.md  widgets_new.md
crates/litui/src/: lib.rs
crates/litui/src/_tutorial/: mod.rs
crates/litui/tests/: generate_screenshots.rs
crates/litui/tutorials/: 01_hello_markdown.md  02_frontmatter_styles.md  03_tables.md  04_images.md  04_widgets.md  05_selectors_and_spans.md  05_styled_containers.md  06_styled_containers.md  06_widgets.md  07_layout.md  07_multi_page_apps.md  08_images.md  08_multi_page_apps.md  09_dynamic_content.md  09_third_party_widgets.md  10_advanced_widgets.md  10_bevy_integration.md  11_bevy_integration.md  11_game_ui_patterns.md  12_game_ui.md
crates/litui_helpers/: Cargo.toml
crates/litui_helpers/src/: lib.rs
crates/litui_macro/: Cargo.toml  README.md
crates/litui_macro/src/: codegen.rs  codegen_ast.rs  lib.rs  parse.rs
crates/litui_macro/tests/: deeply_nested.md  deeply_nested.rs
crates/litui_parser/: Cargo.toml
crates/litui_parser/src/: ast.rs  error.rs  frontmatter.rs  lib.rs  parse.rs
crates/markdown_to_egui_helpers/: Cargo.toml
crates/markdown_to_egui_helpers/src/: lib.rs
crates/markdown_to_egui_macro/: Cargo.toml  README.md
crates/markdown_to_egui_macro/src/: _codegen.rs  codegen.rs  frontmatter.rs  lib.rs  parse.rs
crates/markdown_to_egui_macro/tests/: deeply_nested.rs  dump_events.rs  grammar_harness.rs
crates/markdown_to_egui_macro/tests/grammar_cases/: README.md  invalid_bad_widget_config.md  invalid_columns_arg.md  invalid_unknown_fields.md  valid_basic.md  valid_columns_directive.md  valid_no_frontmatter.md
crates/markdown_to_egui_parser/: Cargo.toml
crates/markdown_to_egui_parser/src/: lib.rs
examples/01_hello/: Cargo.toml  content.md
examples/01_hello/src/: main.rs
examples/02_styles/: Cargo.toml  content.md
examples/02_styles/src/: main.rs
examples/03_tables/: Cargo.toml  content.md
examples/03_tables/src/: main.rs
examples/04_images/: Cargo.toml  content.md
examples/04_images/src/: main.rs
examples/05_containers/: Cargo.toml  content.md
examples/06_widgets/: Cargo.toml  content.md
examples/07_layout/: Cargo.toml  content.md
examples/08_multi_page/: Cargo.toml
examples/09_dynamic/: Cargo.toml
examples/10_advanced/: Cargo.toml
examples/11_bevy/: Cargo.toml
examples/11_bevy/content/: _app.md  about.md  form.md
examples/11_bevy/src/: main.rs
examples/12_game/: Cargo.toml
examples/13_custom/: Cargo.toml
examples/bevy_demo/: Cargo.toml
examples/bevy_demo/src/: main.rs
examples/demo_content/: Cargo.toml
examples/eframe_demo/: Cargo.toml
examples/eframe_demo/src/: main.rs
examples/game_demo/: Cargo.toml
examples/markdown_macro_example/: Cargo.toml  example.md
examples/markdown_macro_example/src/: main.rs
examples/selectors_example/: Cargo.toml  content.md
examples/third_party_widgets/: Cargo.toml  content.md
examples/widgets_example/: Cargo.toml  form.md
knowledge/: bevy-ecs-integration.md  common-pitfalls.md  curriculum.md  dynamic-styling-design.md  egui-0.34-panel-migration.md  foreach-widgets-design.md  frontmatter-and-styles.md  grammar.md  layout-and-spacing.md  proc-macro-architecture.md  pulldown-cmark-0.9.md  rustretro-showcase.md  testing-patterns.md  third-party-widgets.md  upgrade-guide.md  widget-directives.md
knowledge/api/: API.md
litui/: all.html  fn.body.html  fn.bullet_point.html  fn.code.html  fn.emit_bullet_prefix.html  fn.emit_bullet_prefix_colored.html  fn.emit_numbered_prefix.html  fn.emit_numbered_prefix_colored.html  fn.emit_quote_bars.html  fn.emit_quote_bars_colored.html  fn.end_paragraph.html  fn.h1.html  fn.h2.html  fn.h3.html  fn.hyperlink.html  fn.inline_code.html  fn.italic.html  fn.numbered_point.html  fn.quote_indent.html  fn.raised.html  fn.separator.html  fn.small.html  fn.strikethrough.html  fn.styled_hyperlink.html  fn.styled_label.html  fn.styled_label_rich.html  fn.toggle_switch.html  fn.underline.html  fn.weak.html  index.html  macro.define_litui_app!.html  macro.define_litui_app.html  macro.include_litui_ui!.html  macro.include_litui_ui.html  sidebar-items.js  struct.StyleContext.html
litui/_tutorial/: index.html  sidebar-items.js
scripts/: generate-doc-markdown.py
search.index/: 20f30ae981.js  250e88fcea.js  4effc290a5.js  78f3a32e0b.js  793ba201e7.js  7df72ee0e5.js  root.js
search.index/crateNames/: 6d2ca7e366.js
search.index/desc/: afbb8d3eb9.js
search.index/entry/: 4944dd1b19.js
search.index/function/: 8a8a08888a.js
search.index/generic_inverted_index/: a1943f065e.js
search.index/name/: dfd9823f1e.js
search.index/normalizedName/: fe6d06a4d2.js
search.index/path/: 678f959e3b.js
search.index/type/: 95192d5b48.js
src/litui/: lib.rs.html
tests/snapshot_tests/: Cargo.toml
tests/snapshot_tests/fixtures/: advanced_button.md  alignment.md  child_page.md  collapsing.md  datepicker.md  display_only.md  example.md  foreach_checkbox.md  foreach_page.md  foreach_styled.md  foreach_table.md  foreach_tree.md  foreach_tree_inner.md  frame_style.md  if_block.md  image.md  inline_styles.md  light_mode.md  log_widget.md  new_tier_widgets.md  new_widgets.md  numeric_config.md  parent_with_body.md  select_widget.md  selectors.md  stateful.md  stateful_button.md  stateful_progress.md  style_block.md  styled.md  styled_blockquote.md  table_alignment.md  tables.md  task_list.md  weighted_columns.md  widgets.md  widgets_in_table.md
tests/snapshot_tests/fixtures/game_app/: _styles.md  char_create.md  inventory.md  monster_info.md
tests/snapshot_tests/src/: lib.rs
tests/snapshot_tests/tests/: demo_pages.rs  parent_body.rs  snapshots.rs
(+56 files in other folders)
