[package]
name = "litui"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Literate UI for egui — write Markdown, compile to native widgets."

[dependencies]
markdown_to_egui_macro = { path = "../markdown_to_egui_macro" }
markdown_to_egui_helpers = { path = "../markdown_to_egui_helpers" }

[dev-dependencies]
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
egui_kittest = { version = "0.33", features = ["wgpu", "snapshot"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
