[package]
name = "litui"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Literate UI for egui — write Markdown, compile to native widgets."

[dependencies]
litui_macro = { path = "../litui_macro" }
litui_helpers = { path = "../litui_helpers" }

[dev-dependencies]
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
egui_kittest = { version = "0.33", features = ["wgpu", "snapshot"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
