[package]
name = "litui_macro"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dev-dependencies]
egui = "0.33"
pulldown-cmark = "0.9"

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
serde_yaml = "0.9"
litui_parser = { path = "../litui_parser" }
litui_helpers = { path = "../litui_helpers" }

[lints]
workspace = true
