[package]
name = "litui_parser"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
insta = "1.40"

[lints]
workspace = true
