[package]
name = "markdown_to_egui_helpers"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
authors = ["egui contributors"]
description = "Helper functions for egui markdown macro rendering."

[dependencies]
eframe = "0.33"

[lints]
workspace = true
