[package]
name = "markdown_to_egui_macro"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dev-dependencies]
egui = "0.33"

[dependencies]
pulldown-cmark = "0.9"
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
markdown_to_egui_helpers = { path = "../markdown_to_egui_helpers" }

[lints]
workspace = true
