[package]
name = "tut_11_bevy"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
litui = { path = "../../crates/litui" }
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
bevy = { version = "0.18", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "x11",
] }
bevy_egui = "0.39"
