[package]
name = "bevy_demo"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "x11",
] }
bevy_egui = "0.39"
demo_content = { path = "../demo_content" }
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }

[lints]
workspace = true
