[package]
name = "eframe_demo"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
bevy_ecs = "0.18"
demo_content = { path = "../demo_content" }
eframe = "0.33"
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }

[lints]
workspace = true
