[package]
name = "markdown_macro_example"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eframe = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
litui = { path = "../../crates/litui" }

[lints]
workspace = true
