[package]
name = "snapshot_tests"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
egui = "0.34"
egui_extras = { version = "0.34", features = ["all_loaders"] }
egui_kittest = { version = "0.34", features = ["wgpu", "snapshot"] }
image = { version = "0.25", default-features = false, features = ["png"] }
markdown_to_egui_macro = { path = "../../crates/markdown_to_egui_macro" }
markdown_to_egui_helpers = { path = "../../crates/markdown_to_egui_helpers" }

[lints]
workspace = true
