[package]
name = "snapshot_tests"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
egui = "0.34"
egui_extras = { version = "0.34", features = ["all_loaders", "datepicker"] }
jiff = "0.2"
egui_kittest = { version = "0.34", features = ["wgpu", "snapshot"] }
image = { version = "0.25", default-features = false, features = ["png"] }
litui_macro = { path = "../../crates/litui_macro" }
litui_helpers = { path = "../../crates/litui_helpers" }

[lints]
workspace = true
